# src/api/routes/auth.js
@@ -5,5 +5,6 @@ const router = express.Router()
 
 router.post('/login/', AuthController.login)
 router.post('/register/', AuthController.register)
+router.post('/logout/', AuthController.logout)
 
 module.exports = router
